--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <canvas id="main_canvas"></canvas>
-    <script src="/tween.js/dist/tween.umd.js"></script>
+    <script src="/tween/dist/tween.umd.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
