Added info block gui components. Added fade effect on focus

--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
         <div class="swiper-scrollbar"></div>
       </div>
     </nav>
+    <div class="info_block">
+      <h1>Title</h1>
+      <div class="info_block_content styled_scrollbar">
+        <p>
+          <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+        </p>
+        <p>
+          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
+          aldrig tar slut...
+        </p>
+      </div>
+      <button type="button" class="info_block_return">Go <span>back</span></button>
+    </div>
     <div id="scroll_down_footer">
       <span>Scroll down for pricing</span>
     </div>
