Animated focus mode transitions, added highlight.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="swiper-scrollbar"></div>
       </div>
     </nav>
+    <div id="focus_zone"></div>
     <div class="info_block">
       <h1>Title</h1>
       <div class="info_block_content styled_scrollbar">
