--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div id="logo">
       <img src="media/Tidig-logotype-light.svg" />
     </div>
-    <div>
-      <canvas id="main_canvas"></canvas>
-    </div>
+    <canvas id="main_canvas"></canvas>
     <nav id="menu">
       <div class="swiper">
         <div class="swiper-wrapper">
@@ -58,7 +56,26 @@
     <div id="scroll_down_footer">
       <span>Scroll down for pricing</span>
     </div>
-
+    <div class="transition_sec trans_1"></div>
+    <div class="transition_sec trans_2"></div>
+    <div class="transition_sec trans_3"></div>
+    <div id="sec_2d">
+      <div>
+        <p>
+          <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+        </p>
+        <p>
+          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
+          aldrig tar slut...
+        </p>
+      </div>
+    </div>
     <!-- <script src="js/infinite_nav.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/@tweenjs/tween.js@20.0.0/dist/tween.umd.js"></script>
