Re-arranged main(), nav menu is now dynamically created.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,7 @@
     <canvas id="main_canvas"></canvas>
     <nav id="menu">
       <div class="swiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide"><button type="button">Item 1 with a name</button></div>
-            <div class="swiper-slide"><button type="button">Item 2 with a standard name</button></div>
-            <div class="swiper-slide"><button type="button">Item 3 short</button></div>
-            <div class="swiper-slide"><button type="button">Item 4</button></div>
-            <div class="swiper-slide"><button type="button">Item 5 With a really long name, like wow</button></div>
-            <div class="swiper-slide"><button type="button">Item 6 with a standard name</button></div>
-            <div class="swiper-slide"><button type="button">Item 7 with a name</button></div>
-            <div class="swiper-slide"><button type="button">Item 8 short</button></div>
-            <div class="swiper-slide"><button type="button">Item 9</button></div>
-        </div>
+        <div class="swiper-wrapper"></div>
         <div class="swiper-scrollbar"></div>
       </div>
     </nav>
