--- a/index.html
+++ b/index.html
@@ -17,34 +17,40 @@
     <div id="logo">
       <img src="media/Tidig-logotype-light.svg" />
     </div>
-    <canvas id="main_canvas"></canvas>
-    <nav id="menu">
-      <div class="swiper">
-        <div class="swiper-wrapper"></div>
-        <div class="swiper-scrollbar"></div>
+    <div id="threejs_sec">
+      <div id="splash" style="opacity: 1;">
+        <h1>Good initial slogan to peak interest</h1>
+        <span>Click anywhere to explore</span>
       </div>
-    </nav>
-    <div class="info_block">
-      <h1>Title</h1>
-      <div class="info_block_content styled_scrollbar">
-        <p>
-          <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
-        </p>
-        <p>
-          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
-          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
-          aldrig tar slut...
-        </p>
+      <canvas id="main_canvas"></canvas>
+      <nav id="menu" style="opacity: 0;">
+        <div class="swiper">
+          <div class="swiper-wrapper"></div>
+          <div class="swiper-scrollbar"></div>
+        </div>
+      </nav>
+      <div class="info_block">
+        <h1>Title</h1>
+        <div class="info_block_content styled_scrollbar">
+          <p>
+            <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+            den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+          </p>
+          <p>
+            Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
+            den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+            Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
+            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
+            aldrig tar slut...
+          </p>
+        </div>
+        <button type="button" class="info_block_return">Go <span>back</span></button>
       </div>
-      <button type="button" class="info_block_return">Go <span>back</span></button>
-    </div>
-    <div id="scroll_down_footer">
-      <span>Scroll down for pricing</span>
+      <div id="scroll_down_footer">
+        <span>Scroll down for pricing</span>
+      </div>
     </div>
     <div class="transition_sec trans_1"></div>
     <div class="transition_sec trans_2"></div>
