Added dynamic info_block content loader

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div id="threejs_sec">
       <div id="splash" style="opacity: 1;">
-        <h1>Good initial slogan to peak interest</h1>
-        <span>Click anywhere to explore</span>
+        <h1>Ett digitalt planeringsverktyg för entreprenadbranschen</h1>
+        <span><b>Klicka</b> för att börja <b>utforska</b></span>
       </div>
       <canvas id="main_canvas"></canvas>
       <nav id="menu" style="opacity: 0;">
@@ -30,7 +30,7 @@
         </div>
       </nav>
       <div class="info_block">
-        <h1>Title</h1>
+        <h1>Titel</h1>
         <div class="info_block_content styled_scrollbar">
           <p>
             <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
@@ -49,7 +49,7 @@
         <button type="button" class="info_block_return">Go <span>back</span></button>
       </div>
       <div id="scroll_down_footer">
-        <span>Scroll down for pricing</span>
+        <span>Scrolla ned för priser med mer</span>
       </div>
     </div>
     <div class="transition_sec trans_1"></div>
