--- a/index.html
+++ b/index.html
@@ -30,23 +30,9 @@
         </div>
       </nav>
       <div class="info_block">
-        <h1>Titel</h1>
-        <div class="info_block_content styled_scrollbar">
-          <p>
-            <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-            den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
-          </p>
-          <p>
-            Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-            den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
-            Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-            Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
-            aldrig tar slut...
-          </p>
-        </div>
-        <button type="button" class="info_block_return">Go <span>back</span></button>
+        <h1>Title</h1>
+        <div class="info_block_content styled_scrollbar">content</div>
+        <button type="button" class="info_block_return">Gå <span>tillbaka</span></button>
       </div>
       <div id="scroll_down_footer">
         <span>Scrolla ned för priser med mer</span>
