Added dark bg to detail mode and decreased text area

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           <div class="swiper-scrollbar"></div>
         </div>
       </nav>
-      <div class="info_block">
-        <h1>Title</h1>
-        <div class="info_block_content styled_scrollbar">content</div>
-        <button type="button" class="info_block_return">Gå <span>tillbaka</span></button>
+      <div class="info_block_wrapper">
+        <div class="info_block">
+          <h1>Title</h1>
+          <div class="info_block_content styled_scrollbar">content</div>
+          <button type="button" class="info_block_return">Gå <span>tillbaka</span></button>
+        </div>
       </div>
       <div id="scroll_down_footer">
         <span>Scrolla ned för priser med mer</span>
