Added exit focus mode cross

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <div class="swiper-scrollbar"></div>
         </div>
       </nav>
+      <div id="exit_cross" style="visibility: hidden;"></div>
       <div class="info_block_wrapper">
         <div class="info_block">
           <h1>Title</h1>
