Switched font to work-sans

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>3D - Tidig</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
     <link rel="stylesheet" href="css/main.css" />
     <!-- Get polyfill for importmap since support is lack-luster in certain browsers -->
     <script async src="https://unpkg.com/es-module-shims@1.7.1/dist/es-module-shims.js"></script>
