--- a/index.html
+++ b/index.html
@@ -47,19 +47,14 @@
     <div class="transition_sec trans_3"></div>
     <div id="sec_2d">
       <div>
+        <h2>Lösningen heter Tidig!</h2>
         <p>
-          <b>Lorem</b> ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
+          Välkommen till livet med Tidig! Med planeringsexperten som sällskap blir vägen framåt mycket 
+          slätare och verksamheten smidigare. Tuta och kör!
         </p>
-        <p>
-          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att 
-          den aldrig tar slut och det gäller även denna text ty den bara växer och växer ut i oändligheten.
-          Lorem ipsum tralla lalla här kommer en massa text som inte har någon betydelse överhuvudtaget. 
-          Kanske en bra beskrivning av produkten skulle sitta fint här. Det bästa med lång text är att den 
-          aldrig tar slut...
-        </p>
+        <p>Quote</p>
+        <p>Priser</p>
+        <p>Demo/Kontakta oss</p>
       </div>
     </div>
     <!-- <script src="js/infinite_nav.js"></script> -->
