Added demo option in detail view

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <div class="info_block">
           <h1>Title</h1>
           <div class="info_block_content styled_scrollbar">content</div>
-          <button type="button" class="info_block_return">Gå <span>tillbaka</span></button>
+          <button type="button" class="info_block_return">
+            <span style="color: #FF9B2A">Boka ett demo</span> eller
+            <br>
+            <span>gå tillbaka</span>
+          </button>
         </div>
       </div>
       <div id="scroll_down_footer">
