Styled 2D intro and quote section

--- a/index.html
+++ b/index.html
@@ -50,16 +50,34 @@
     <div class="transition_sec trans_2"></div>
     <div class="transition_sec trans_3"></div>
     <div id="sec_2d">
-      <div>
-        <h2>Lösningen heter Tidig!</h2>
+      <div id="sec_2d_intro">
+        <h1>Lösningen heter Tidig!</h1>
         <p>
           Välkommen till livet med Tidig! Med planeringsexperten som sällskap blir vägen framåt mycket 
           slätare och verksamheten smidigare. Tuta och kör!
         </p>
-        <p>Quote</p>
-        <p>Priser</p>
-        <p>Demo/Kontakta oss</p>
       </div>
+      <div class="transition_sec trans_3"></div>
+      <div class="transition_sec trans_2"></div>
+      <div class="transition_sec trans_1"></div>
+      <div id="sec_2d_quote">
+        <h2><i>Hör från kunderna</i></h2>
+        <img src="media/quote.jpg">
+        <p>
+          "Tack vare planeringsverktyget Tidig blir vi nu helt digitala. Planeringen blir enklare och 
+          våra förare får en helhetsöversikt i appen med information, navigering och dokumentation av 
+          bilarna som ska transporteras. Allt på en och samma plats."
+        </p>
+        <span style="text-align: center;">
+          <b>PERSON PERSONSSON</b><br>
+          VD FÖRETAG I SVERIGE AB
+        </span>
+      </div>    
+      <div class="transition_sec trans_1"></div>
+      <div class="transition_sec trans_2"></div>
+      <div class="transition_sec trans_3"></div>
+      <p>Priser</p>
+      <p>Demo/Kontakta oss</p>
     </div>
     <!-- <script src="js/infinite_nav.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
