--- a/index.html
+++ b/index.html
@@ -49,36 +49,56 @@
     <div class="transition_sec trans_1"></div>
     <div class="transition_sec trans_2"></div>
     <div class="transition_sec trans_3"></div>
-    <div id="sec_2d">
-      <div id="sec_2d_intro">
-        <h1>Lösningen heter Tidig!</h1>
-        <p>
-          Välkommen till livet med Tidig! Med planeringsexperten som sällskap blir vägen framåt mycket 
-          slätare och verksamheten smidigare. Tuta och kör!
-        </p>
-      </div>
-      <div class="transition_sec trans_3"></div>
-      <div class="transition_sec trans_2"></div>
-      <div class="transition_sec trans_1"></div>
-      <div id="sec_2d_quote">
-        <h2><i>Hör från kunderna</i></h2>
-        <img src="media/quote.jpg">
-        <p>
-          "Tack vare planeringsverktyget Tidig blir vi nu helt digitala. Planeringen blir enklare och 
-          våra förare får en helhetsöversikt i appen med information, navigering och dokumentation av 
-          bilarna som ska transporteras. Allt på en och samma plats."
-        </p>
-        <span style="text-align: center;">
-          <b>PERSON PERSONSSON</b><br>
-          VD FÖRETAG I SVERIGE AB
-        </span>
-      </div>    
-      <div class="transition_sec trans_1"></div>
-      <div class="transition_sec trans_2"></div>
-      <div class="transition_sec trans_3"></div>
-      <p>Priser</p>
-      <p>Demo/Kontakta oss</p>
+    <div id="sec_2d_intro">
+      <h1>Lösningen heter Tidig!</h1>
+      <p>
+        Välkommen till livet med Tidig! Med planeringsexperten som sällskap blir vägen framåt mycket 
+        slätare och verksamheten smidigare. Tuta och kör!
+      </p>
     </div>
+    <div class="transition_sec trans_3"></div>
+    <div class="transition_sec trans_2"></div>
+    <div class="transition_sec trans_1"></div>
+    <div id="sec_2d_quote">
+      <h2><i>Hör från kunderna</i></h2>
+      <img src="media/quote.jpg">
+      <p>
+        "Tack vare planeringsverktyget Tidig blir vi nu helt digitala. Planeringen blir enklare och 
+        våra förare får en helhetsöversikt i appen med information, navigering och dokumentation av 
+        bilarna som ska transporteras. Allt på en och samma plats."
+      </p>
+      <span style="text-align: center;">
+        <b>PERSON PERSONSSON</b><br>
+        VD FÖRETAG I SVERIGE AB
+      </span>
+    </div>    
+    <div class="transition_sec trans_1"></div>
+    <div class="transition_sec trans_2"></div>
+    <div class="transition_sec trans_3"></div>
+    <div id="sec_2d_prices">
+      <h2>Schyssta priser, alltid</h2>
+      <div class="price_wrapper">
+        <div class="price_item">
+          <span>1-49 MEDARBETARE</span>
+          <span>från <b>99 kr*</b></span>
+          <span>per månad och anställd</span>
+        </div>
+        <div class="price_item">
+          <span>50-100 MEDARBETARE</span>
+          <span>från <b>89 kr*</b></span>
+          <span>per månad och anställd</span>
+        </div>
+        <div class="price_item">
+          <span>ÖVER 100 MEDARBETARE</span>
+          <span><b>Offert</b></span>
+          <span>baserad på företagets storlek</span>
+        </div>
+      </div>
+      <div class="price_extra">
+        <span>*Startavgift på 9 995 kr tillkommer samt 1 000 kr/månad för hosting</span>
+      </div>
+    </div>
+    <p>Demo/Kontakta oss</p>
     <!-- <script src="js/infinite_nav.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/@tweenjs/tween.js@20.0.0/dist/tween.umd.js"></script>
