Added contact/book demo to 2d section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         slätare och verksamheten smidigare. Tuta och kör!
       </p>
     </div>
-    <div class="transition_sec trans_3"></div>
-    <div class="transition_sec trans_2"></div>
-    <div class="transition_sec trans_1"></div>
+    <div style="margin-left: auto;" class="transition_sec trans_3"></div>
+    <div style="margin-left: auto;" class="transition_sec trans_2"></div>
+    <div style="margin-left: auto;" class="transition_sec trans_1"></div>
     <div id="sec_2d_quote">
       <h2><i>Hör från kunderna</i></h2>
       <img src="media/quote.jpg">
@@ -98,7 +98,10 @@
         <span>*Startavgift på 9 995 kr tillkommer samt 1 000 kr/månad för hosting</span>
       </div>
     </div>
-    <p>Demo/Kontakta oss</p>
+    <div id="sec_2d_contact">
+      <h2>Intresserad och vill veta mer? Kontakta oss!</h2>
+      <span>Boka demo</span>
+    </div>
     <!-- <script src="js/infinite_nav.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/@tweenjs/tween.js@20.0.0/dist/tween.umd.js"></script>
