Added lang encoding in head

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>3D - Tidig</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
     <link rel="stylesheet" href="css/main.css" />
